cleanup state processor: constant instead of linear time
GitOrigin-RevId: a2cccc8cc029f263b0d9ee30c3d5e92981de0554